Prevent ol/ul misalignment next to image

--- a/css/style.sass
+++ b/css/style.sass
@@ -199,6 +199,7 @@ article
     margin: 5px 0
   ol, ul
     padding: .5em 3em
+    overflow: hidden
 
 footer
   text-align: center
@@ -230,7 +231,7 @@ footer
     display: block
     width: 40px
     margin: 2px
-  
+
 p.heading, h2.heading
   text-align: center
 
